--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,135 @@
-.App {
-  text-align: center;
+.logo{
+	font-family: Mulish;
+font-size: 30px;
+font-weight: 800;
+color: white;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.font{
+	font-family: Mulish;
+font-size: 16px;
+font-weight: 700;
+color: white;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.text1{
+	font-family: Work Sans;
+font-size: 48px;
+font-weight: 400;
+color: white;
+}
+.text2{
+	font-family: Mulish;
+font-size: 18px;
+font-weight: 700;
+color: azure;
+}
+.input{
+	height: 56px;
+width: 280px;
+border-radius: 4px;
+}
+.button{
+	font-family: Mulish;
+font-size: 16px;
+font-weight: 700;
+height: 55px;
+margin-left: 14px;
+border-radius: 4px;
+background-color: #0BBEF2;
+color: azure;
+}
+.body1{
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+padding: 0px;
+}
+.footer{
+	background-color:#252B3B;
+	color: aliceblue;
+}
+.body{
+display: flex;
+justify-content: center;
+flex-direction: column;
+}
+.abc{
+	width: 100%;
+	height: 1000px;
+}
+.border1{
+	border-style: hidden;
+	margin-top:  400px
+}
+.link{
+	position: absolute;
+	margin-top: 10px;
+	display: flex;
+	justify-content: end;
+}
+#pr{
+	color: aliceblue;
+	margin-left: 40px;
+}
+.box1{
+	padding: 30px;
+	height: 374px;
+  width: 366px;
+  box-shadow: 5px 5px 50px #888888;
+  margin-left: 30px;
+  margin-top: 30px;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  #q{
+	font-size: 18px;
+	color: gray;
   }
-  to {
-    transform: rotate(360deg);
+  #a{
+	font-size: 18px;
   }
-}
+  .photo{
+	border-radius: 20px;
+	width: 363px;
+	height: 170px;
+  }
+  .column{
+	display: flex;
+	flex-direction: row;
+	margin: 50px;
+  }
+  .a{
+	display: flex;
+	justify-content: center;
+  }
+  .font9{
+	display: flex;
+	justify-content: center;
+	width: 800px;
+font-family: Mulish;
+font-size: 18px;
+font-weight: 600;
+line-height: 29px;
+  }
+  #s{
+	width: 100%;
+	height: 100%;
+  }
+  #p{width:50px;
+	height: 50px;
+	border-radius: 100px;
+	margin-top: 10px;
+  }
+  #w3review{
+	margin-top:50px;
+	margin-bottom:50px;
+  }
+  .fon8{
+	font-family: Mulish;
+font-size: 12px;
+font-weight: 600;
+line-height: 18px;
+letter-spacing: 0em;
+  }
+  #o{width:50px;
+	height: 50px;
+	border-radius: 100px;
+margin-top: -10px;}
